# hyperag

./: .gitignore  README.md  pyproject.toml
src/: basic_ingester.py
src/agent/core/: config.py  dependencies.py  models.py  storage.py
src/agent/ingestion/: pipeline.py
src/core/: storage.py
src/hyperag/core/: config.py  storage.py
src/hyperag/ingest/: pipeline.py  upsert_test.py
src/hyperag/ingest/transformations/: chunking.py  embedding.py
src/ingest/: pipeline.py
tests/: conftest.py  test_ingestion_pipeline.py  test_pipeline.py  test_query.py
