[project]
name = "hyperag"
version = "0.1.0"
description = "An advanced agentic RAG architecture."
requires-python = ">=3.13"
dependencies = [
    "langgraph",
    "llama-index",
    "chromadb",
    "python-dotenv",
    "llama-index-vector-stores-chroma>=0.4.2",
    "openai>=1.95.1",
    "llama-index-embeddings-openai>=0.3.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    #"mypy",

    #"pytest",
    #"pytest-asyncio",

    #"jupyter",
    #"ipykernel",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A", "C4"]
